tests/ui/static/static-vec-repeat-not-constant.stderr
error[E0015]: cannot call non-const function `foo` in statics
  --> $DIR/static-vec-repeat-not-constant.rs:3:25
   |
LL | static a: [isize; 2] = [foo(); 2];
   |                         ^^^^^
   |
   = note: calls in statics are limited to constant functions, tuple structs and tuple variants
   = note: consider wrapping this expression in `std::sync::LazyLock::new(|| ...)`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0015`.
